--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,9 +1,6 @@
 @import "~bootstrap/scss/bootstrap";
 @import "~@fortawesome/fontawesome-free/css/all.min.css";
-@import "./quads";
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Roboto&display=swap');
 
-body {
-  background-color: antiquewhite;
-  color: brown;
-  text-align: center;
-}
+@import './globals';
+@import './components';
